--- a/Diplom/Views/Home/Index.cshtml
+++ b/Diplom/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@model List<Diplom.Models.Account.User>;
+@model List<Diplom.Models.Entity.Consultation>;
 
 
 
@@ -14,4 +14,42 @@
             </button>
         </div>
     }
+    <div class="text-center" style="height:100%">
+        <div style="padding-top: 40px; padding-bottom: 40px">
+            <h1>Список консультаций</h1>
+        </div>
+      <div>
+          <div style="text-align:center">
+            <div style="margin-left:250px">
+             <div class="card text-center" style="width: 50rem;">
+                   <ul class="list-group list-group-flush">
+                      @for(int i = 0; i < 2; i++){
+                         
+                           <li class="list-group-item">
+                                <p style="font-family: cursive">@Model[i].Name</p>
+                                    <button type="button" class="btn btn-info">
+                                        <a class="px-2 text-black" style="text-decoration:none" asp-controller="Home" asp-action="GetConsultation" asp-route-id="@Model[i].Id">Посмотреть</a>
+                                    </button>
+                           </li>
+
+                              
+                       }
+
+                 </ul>
+             </div>
+            </div>
+          </div>
+
+
+           
+
+      </div>
+    </div>
+
+    
+
 </div>
+
+
+
+
