--- a/Diplom/Views/Account/Register.cshtml
+++ b/Diplom/Views/Account/Register.cshtml
@@ -22,13 +22,19 @@
                                     <input asp-for="Name" class="form-control textbox-dg font-weight-bold text-center" placeholder="Имя" type="text">
                                 </div>
                                 <div class="form-group">
-                                    <input autocomplete="new-password" asp-for="Password" placeholder="Пароль" class="form-control textbox-dg font-weight-bold text-center" type="password">
+                                    <input autocomplete="off" asp-for="Password" placeholder="Пароль" class="form-control textbox-dg font-weight-bold text-center" type="password">
                                 </div>
                                 
                                 <div class="form-group">
-                                    <input autocomplete="new-password" asp-for="PasswordConfirm" placeholder="Подтвердите пароль" class="form-control textbox-dg font-weight-bold text-center" type="password">
+                                    <input autocomplete="off" asp-for="PasswordConfirm" placeholder="Подтвердите пароль" class="form-control textbox-dg font-weight-bold text-center" type="password">
                                 </div>
-                               
+                                
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <div class="form-group">
+                                        <input asp-for="Role" placeholder="Введите роль" class="form-control textbox-dg font-weight-bold text-center" type="text">
+                                    </div>
+                                }
                                 <button class="btn btn-success btn-lg float-right" type="submit">Отправить</button>
                             </form>
                         </div>
