beta pre alpha build

--- a/Diplom/Views/Home/Index.cshtml
+++ b/Diplom/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="text-end">
             <button href="/Admin" type="button" class="btn btn-outline-dark me-2">
-                <a class="px-2 text-black" style="text-decoration:none" asp-controller="Account" asp-action="Register">Добавить учетную запись администратора</a>
+                <a class="px-2 text-black" style="text-decoration:none" asp-controller="Account" asp-action="Register">Создать учетную запись</a>
             </button>
         </div>
     }
