--- a/Diplom/Views/Home/GetUsers.cshtml
+++ b/Diplom/Views/Home/GetUsers.cshtml
@@ -22,7 +22,7 @@
                     <td>@user.Name</td>
                     <td>@user.Role</td>
                     <td>
-                        <form asp-controller="Home" asp-action="DeleteUser" asp-route-id="@user.Id" method="post">
+                        <form asp-controller="Home" asp-action="DeleteUser" asp-route-userId="@user.Id" method="post">
                             <button type="submit" class="btn btn-sm btn-danger">
                                 Удалить
                             </button>
