--- a/Diplom/Views/Home/AddCons.cshtml
+++ b/Diplom/Views/Home/AddCons.cshtml
@@ -25,7 +25,7 @@
                                     <input asp-for="Description" class="form-control textbox-dg font-weight-bold text-center" placeholder="Описание" type="text">
                                 </div>
                                 <div class="form-group">
-                                    <input asp-for="Date" class="form-control textbox-dg font-weight-bold text-center" placeholder="Имя" type="date">
+                                    <input asp-for="Date" class="form-control textbox-dg font-weight-bold text-center" placeholder="Имя" type="datetime-local">
                                 </div>
                                 <button class="btn btn-success btn-lg float-right" type="submit">Отправить</button>
                             </form>
